delete tilt animation in download link (mediaqueries)

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,26 @@ body {
     /* animation: bounce 2s ease-in-out infinite;  */
 }
 
+#main #section1 .download {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+#main #section1 .download a {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px; 
+    font-weight: bold; 
+    text-decoration: none; 
+    cursor: pointer;
+    color: rgba(113, 169, 241, 0.9);
+    background-color: rgba(10, 10, 10, 0.9);
+    border: none;
+    margin: 0 auto;
+    
+}
+
+#main #section1 .download a:hover { animation: tilt 0.25s ease infinite alternate; }
+
 #main #section2 .section2-subsection {
     margin: 0;
     padding: 0;
@@ -208,26 +228,6 @@ body {
     justify-content: space-evenly;
     margin-bottom: 15px;
 }
-
-#main #section1 .download {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 15px;
-}
-#main #section1 .download a {
-    font-family: 'Raleway', sans-serif;
-    font-size: 20px; 
-    font-weight: bold; 
-    text-decoration: none; 
-    cursor: pointer;
-    color: rgba(113, 169, 241, 0.9);
-    background-color: rgba(10, 10, 10, 0.9);
-    border: none;
-    margin: 0 auto;
-    
-}
-
-#main #section1 .download a:hover { animation: tilt 0.25s ease infinite alternate; }
 
 #main #section2 #next-item-btn, #main #section2 #prev-item-btn {
     font-family: 'Raleway', sans-serif;
@@ -300,6 +300,15 @@ body {
         font-size: 22px; 
         color: rgba(113, 169, 241, 0.9);
     }
+
+
+    #main #section1 .download a {
+        font-size: 16px;
+        padding: 10px 20px;
+    }
+    
+    #main #section1 .download a:hover { animation: none; }
+
 
     #main #section2 .section2-subsection .demo-img-container img {
         width: 100%;
